header section is ready

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,18 +1,116 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
 .open-sans-genarel {
   font-family: "Open Sans", serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
+  font-variation-settings: "wdth" 100;
 }
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-body{
-    
+body {
+}
+
+/* shared color */
+.dark-1 {
+  color: #181818;
+}
+.dark-2 {
+  color: #474747;
+}
+.dark-3 {
+  color: #757575;
+}
+
+.btn-primary {
+  background-color: #fd6e0a;
+  color: white;
+  padding: 14px 35px;
+  font-size: 16px;
+  border: none;
+  border-radius: 8px;
+}
+.bg-primary {
+  background-color: #fff8f3;
+}
+
+.header-container {
+  width: 100%;
+  height: 637px;
+  background-color: #fff8f3;
+  padding: 32px 38px 0px 190px;
+  background-image: url("../assets/header_bg.png"), url("../assets/developer.png");
+  background-repeat: no-repeat;
+  background-position: bottom right, top left;
+  background-size: 650px 410px, 120px 100%;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* background-color: aqua; */
+}
+nav .name {
+  font-size: 38px;
+  font-weight: 800;
+}
+.name span{
+    color: rgb(255, 97, 5);
+}
+nav ul {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  /* justify-content: space-between; */
+  margin-right: 150px;
+  align-items: center;
+}
+nav ul li a {
+  text-decoration: none;
+  font-size: 17px;
+}
+.nav-btn {
+  font-size: 17px;
+}
+
+/* Banar */
+.banar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.banar-context {
+  width: 500px;
+  height: 300px;
+}
+.banar-greeting {
+  font-size: 20px;
+  font-weight: 500;
+}
+.banar-title {
+  font-size: 64px;
+  font-weight: 700;
+  margin-bottom: 18px;
+}
+.banar-description {
+  font-size: 14px;
+}
+.buttons {
+  margin-top: 25px;
+  display: flex;
+  gap: 9px;
+}
+/* .buttons button{
+    font-size: 20px;
+    padding: 26px 40px;
+} */
+.banar-container img {
+  width: 470px;
+  height: 543px;
+  margin-top: 10px;
 }
