--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,8 +12,7 @@
   padding: 0;
   box-sizing: border-box;
 }
-body {
-}
+
 
 /* shared color */
 .dark-1 {
@@ -55,7 +54,7 @@ main {
   margin: 0 auto;
 }
 
-section {
+main section{
   margin-top: 120px;
 }
 
@@ -245,3 +244,66 @@ background-color: #ffe7d6;
     /* display: block; */
     text-align: center;
 }
+
+/* Footer Section */
+footer{
+    background-color: #f5bdaabd;
+    margin-top: 120px;
+    width: 100%;
+    height: 460px;
+}
+.footer-container{
+    position: relative;
+    /* padding: 90px 0px; */
+    height: auto;
+    display: flex;
+    /* gap: 380px; */
+    justify-content: space-around;
+    align-items: center;
+    background-color: #fcb69f;
+}
+.connect{
+    flex-basis: 40%;
+}
+.connect p{
+    font-size: 14px;
+    color: #474747;
+}
+.connect .socials{
+    display: flex;
+    gap: 18px;
+    margin-top: 12px;
+}
+.contact{
+    flex-basis: 40%;
+}
+.footer-form input[type="text"], input[type="email"], textarea{
+    display: block;
+    padding: 16px 28px;
+    border-radius: 8px;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    margin: 9px 0;
+}
+.footer-form input[type="submit"]{
+    display: block;
+    padding: 12px 38px;
+    border-radius: 8px;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    margin: 9px 0;
+    background-color: #fd6e0a;
+    color: white;
+}
+
+/* .footer-form textarea{
+        display: block;
+    padding: 12px 38px;
+    border-radius: 8px;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    margin: 9px 0;
+} */
